Fix Firefox playback issue
- Activate invisible iframe hack

close #25

--- a/src/main/components/App/App.css
+++ b/src/main/components/App/App.css
@@ -64,4 +64,8 @@ canvas {
   height: 0;
   display: block;
   border: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
